--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ GOOSE_MIGRATION_DIR=./database/migrations
 APP_ENV=development
 APP_HOST="0.0.0.0"
 APP_PORT="3000"
+APP_TIMEZONE="Asia/Jakarta"
 
 # Telegram
 TELEGRAM_BOT_TOKEN="bot_token"
