docs: clarify .env.example instructions

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ APP_TIMEZONE="Asia/Jakarta"
 
 # Telegram
 TELEGRAM_BOT_TOKEN="bot_token"
-TELEGRAM_ALLOWED_IDS="123456789"
+TELEGRAM_ALLOWED_IDS="123456789" # Enter your Telegram ID here (comma-separated). You can find your ID by sending /start to the bot.
 
 # Digiflazz
 DIGIFLAZZ_BASE_URL="https://api.digiflazz.com/v1"
@@ -20,9 +20,9 @@ DIGIFLAZZ_USERNAME="username"
 DIGIFLAZZ_API_KEY="api_key"
 
 # Database
-DATABASE_URL=":memory:"
+DATABASE_URL=":memory:" # Use SQLite in-memory database.
 
 # Webhook
-WEBHOOK_URL="bot_url"
-TELEGRAM_WEBHOOK_SECRET_TOKEN="webhook_secret_token"
-DIGIFLAZZ_WEBHOOK_SECRET_TOKEN="webhook_secret_token"
+WEBHOOK_URL="bot_url" # It must be publicly accessible. You can use ngrok to deploy it locally.
+TELEGRAM_WEBHOOK_SECRET_TOKEN="auto" # Set this to "auto" to generate it automatically.
+DIGIFLAZZ_WEBHOOK_SECRET_TOKEN="webhook_secret_token" # To validate the Digiflazz webhook, make sure it matches the one configured in Digiflazz.
