chore: bump deps

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ GOOSE_DBSTRING=":memory:"
 GOOSE_MIGRATION_DIR=./database/migrations
 
 # App
-APP_ENV=development
+APP_ENV=production
 APP_HOST="0.0.0.0"
 APP_PORT="3000"
 APP_NAME="Digiflazz Bot"
